# MyPeeps

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  locustfile.py  manage.py  nginx.mypeeps.conf  pyproject.toml  runner.sh  runtime.env
MyPeeps-Frontend/: index.html  package-lock.json  package.json  tailwind.config.js
MyPeeps-Frontend/src/: App.jsx
MyPeeps-Frontend/src/pages/: Home.jsx  LoginForm.jsx
accounts/: admin.py  forms.py  managers.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_user_email.py
api/: models.py  permissions.py  tests.py  urls.py
api/migrations/: 0001_initial.py  0002_alter_peeps_name.py  0002_hypertable.py  0003_peeps_seed.py  0004_alter_peeps_seed.py  0005_peeps_users.py  0006_peeps_age_peeps_hp.py  0007_peeps_attribute_creativity_peeps_attribute_romance.py  0008_alter_peeps_attribute_creativity_and_more.py  0009_alter_peeps_attribute_creativity_and_more.py  0010_alter_peeps_attribute_creativity_and_more.py  0011_alter_peeps_attribute_creativity_and_more.py  0012_alter_peeps_attribute_creativity_and_more.py  0013_alter_peeps_attribute_creativity_and_more.py  0014_alter_peeps_attribute_creativity_and_more.py  0015_peepsmetric.py  0016_remove_peepsmetric_id_alter_peepsmetric_time.py
api/serializers/: Actions.py  Effect.py  Login.py  Peeps.py  __init__.py
api/views/: Effects.py  Login.py  Peeps.py  PeepsActions.py  TestViewUser.py  __init__.py
my/: settings.py  urls.py
mypeeps/: asgi.py  settings.py  urls.py  wsgi.py
playbooks/: Actions.json  Actions.xml
(+4 files in other folders)
